--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -45,6 +45,14 @@
           <li><a href="/about/">About</a></li>
         </ul>
       </nav>
+      
+      {% if messages %}
+        <ul class="messages">
+          {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
     </header>
   
     <div id="main">
