--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -3,33 +3,23 @@
 <head>
   <meta charset="utf-8">
 
-  <!-- www.phpied.com/conditional-comments-block-downloads/ -->
   <!--[if IE]><![endif]-->
 
-  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
-       Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>{% block title %}{% endblock %} | {{ site_name }}</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <!--  Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
-  <!-- CSS : implied media="all" -->
   <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css?v=1">
-
-  <!-- For the less-enabled mobile browsers like Opera Mini -->
   <link rel="stylesheet" media="handheld" href="{{ MEDIA_URL }}css/handheld.css?v=1">
-
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="{{ MEDIA_URL }}js/modernizr-1.5.min.js"></script>
-
+  {% block extra_script %}{% endblock %}
 </head>
-
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 
 <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
 <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
@@ -64,19 +54,8 @@
   </div> <!--! end of #container -->
 
 
-  <!-- Javascript at the bottom for fast page loading -->
-
-  <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script>!window.jQuery && document.write('<script src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"><\/script>')</script>
-
-
-  <script src="{{ MEDIA_URL }}js/plugins.js?v=1"></script>
-  <script src="{{ MEDIA_URL }}js/script.js?v=1"></script>
-
-  <!--[if lt IE 7 ]>
-      <script src="{{ MEDIA_URL }}js/dd_belatedpng.js?v=1"></script>
-  <![endif]-->
 
   {% comment %}
   <script>
