--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -13,11 +13,11 @@
 
   <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
-  <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css?v=1">
-  <link rel="stylesheet" media="handheld" href="{{ MEDIA_URL }}css/handheld.css?v=1">
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=1">
+  <link rel="stylesheet" media="handheld" href="{{ STATIC_URL }}css/handheld.css?v=1">
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="{{ MEDIA_URL }}js/modernizr-1.5.min.js"></script>
+  <script src="{{ STATIC_URL }}js/modernizr-1.5.min.js"></script>
   {% block extra_script %}{% endblock %}
 </head>
 
@@ -55,7 +55,7 @@
 
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script>!window.jQuery && document.write('<script src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"><\/script>')</script>
+  <script>!window.jQuery && document.write('<script src="{{ STATIC_URL }}js/jquery-1.4.2.min.js"><\/script>')</script>
 
   {% comment %}
   <script>
