--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -16,46 +16,55 @@
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=1">
   <link rel="stylesheet" media="handheld" href="{{ STATIC_URL }}css/handheld.css?v=1">
  
-  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  <script>!window.jQuery && document.write('<script src="{{ STATIC_URL }}js/jquery-1.4.2.min.js"><\/script>')</script>
+
   <script src="{{ STATIC_URL }}js/modernizr-1.5.min.js"></script>
   {% block extra_script %}{% endblock %}
 </head>
 
-<!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
-<!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
-<!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
-<!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
-
+<body class="{% block body_class %}{% endblock %}">
   <div id="container">
-    <header>
-      <nav>
-        <ul>
-          <li><a class="active" href="/">Home</a></li>
-          <li><a href="/about/">About</a></li>
-        </ul>
-      </nav>
-      
-      {% if messages %}
-        <ul class="messages">
-          {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-    </header>
+    {% block header_wrapper %}
+    <div id="header_wrapper">
+      <header>
+        <nav>
+          <ul>
+            <li><a class="active" href="/">Home</a></li>
+            <li><a href="/about/">About</a></li>
+          </ul>
+        </nav>
+        
+        {% if messages %}
+          <ul class="messages">
+            {% for message in messages %}
+              <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </header>
+    </div>
+    {% endblock %}
   
+    {% block content_wrapper %}
     <div id="main">
       <h1>{% block content_title %}{% endblock %}</h1>
       {% block content %}{% endblock %}
     </div>
+    {% endblock %}
+
+    {% block sidebar_wrapper %}
+    <div id="sidebar">
+      {% block sidebar %}{% endblock %}
+    </div>
+    {% endblock %}
     
-    <footer>{% block footer %}{% endblock %}</footer>
+    {% block footer_wrapper %}
+    <div id="footer_wrapper">
+      <footer>{% block footer %}{% endblock %}</footer>
+    </div>
+    {% endblock %}
   </div> <!--! end of #container -->
-
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script>!window.jQuery && document.write('<script src="{{ STATIC_URL }}js/jquery-1.4.2.min.js"><\/script>')</script>
 
   {% comment %}
   <script>
@@ -69,7 +78,6 @@
    })(document, 'script');
   </script>
   {% endcomment %}
-  
 </body>
 </html>
 
