--- a/django/static/css/style.css
+++ b/django/static/css/style.css
@@ -193,3 +193,11 @@ button {  width: auto; overflow: visible; }
  /* Primary Styles
     Author: 
  */
+
+#messages { border:1px solid #C8DCC2; margin:1em 0; }
+#messages ul .debug{ background: #EEFAEA; padding: 0.5em, 0 0.5em 0; list-style: none;}
+#messages ul .info{ background: #EEFAEA; padding: 0.5em, 0 0.5em 0; list-style: none;}
+#messages ul .success{ background: #EEFAEA; padding: 0.5em, 0 0.5em 0; list-style: none;}
+#messages ul .warning{ background: #FF3333; padding: 0.5em, 0 0.5em 0; list-style: none;}
+#messages ul .error{ background: #FF3333; padding: 5px, 0 5px 0; list-style: none;}
+#messages ul li { background: none; padding-left: 5px; padding-top: 8px; padding-bottom: 8px;font-size: 1.2em; }
