--- a/flaskpeewee/templates/base.html
+++ b/flaskpeewee/templates/base.html
@@ -1,18 +1,79 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hello, World</title>
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}" />
+    <title>flask-peewee site shell</title>
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}" />
+    {% block extra_head %}{% endblock %}
+    <script src="{{ url_for('static', filename='js/jquery-1.4.2.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('admin.static', filename='js/bootstrap-alerts.js') }}"></script>
+    {% block extra_scripts %}{% endblock %}
+    {#
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-XXXXXXX']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    #}
   </head>
+  
   <body>
-    <div class="page">
-      <h1>{% block content_title %}{% endblock %}</h1>
-      
-      {% for message in get_flashed_messages() %}
-        <div class=flash>{{ message }}</div>
-      {% endfor %}
-      
-      {% block content %}{% endblock %}
+  
+    <div class="topbar">
+      <div class="fill">
+        <div class="container">
+          <a class="brand" href="/">Branding</a>
+
+          <ul class="nav">
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+          </ul>
+          {% if user %}
+          <form action="{{ url_for('auth.logout', next=request.url) }}" class="pull-right" method="post">
+            <button class="btn" type="submit">Log out</button>
+          </form>
+          {% else %}
+          <form action="{{ url_for('auth.login', next=request.url) }}" class="pull-right" method="post">
+            <input class="input-small" name="username" type="text" placeholder="Username">
+            <input class="input-small" name="password" type="password" placeholder="Password">
+            <button class="btn" type="submit">Log in</button>
+          </form>
+          {% endif %}
+        </div>
+      </div>
     </div>
+  
+    <div class="container">
+      <div class="content">
+        {% for category, message in get_flashed_messages(with_categories=true) %}
+          <div class="alert-message {{ category }}">
+            <a class="close" href="#">×</a>
+            <p>{{ message }}</p>
+          </div>
+        {% endfor %}
+        <div class="page-header">
+          <h1>{% block content_title %}{% endblock %}</h1>
+        </div>
+        <div class="row">
+          <div class="span12">
+            {% block content %}{% endblock %}
+          </div>
+          <div class="span4 sidebar">
+            {% block sidebar %}{% endblock %}
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <p>Shell site</p>
+      </footer>
+
+    </div> <!-- /container -->
   </body>
 </html>
