--- a/flaskpeewee/templates/homepage.html
+++ b/flaskpeewee/templates/homepage.html
@@ -1,3 +1,7 @@
 {% extends "base.html" %}
 
 {% block content_title %}Home{% endblock %}
+
+{% block content %}
+  <p>a lot of little stuff built with flask</p>
+{% endblock %}
