--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -1,83 +1,81 @@
 <!doctype html>
-<html lang="en" class="no-js">
-<head>
-  <meta charset="utf-8">
+<html>
+  <head>
+    <title>flask-peewee site shell</title>
+    <link rel=stylesheet type=text/css href="{{ STATIC_URL }}css/bootstrap.min.css" />
+    <link rel=stylesheet type=text/css href="{{ STATIC_URL }}css/style.css" />
+    {% block extra_head %}{% endblock %}
+    <script src="{{ STATIC_URL }}js/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap-alerts.js"></script>
+    {% block extra_scripts %}{% endblock %}
+    {% comment %}
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-XXXXXXX']);
+      _gaq.push(['_trackPageview']);
 
-  <!--[if IE]><![endif]-->
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>{% block title %}{% endblock %} | {{ site_name }}</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=1">
-  <link rel="stylesheet" media="handheld" href="{{ STATIC_URL }}css/handheld.css?v=1">
- 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script>!window.jQuery && document.write('<script src="{{ STATIC_URL }}js/jquery-1.4.2.min.js"><\/script>')</script>
-
-  <script src="{{ STATIC_URL }}js/modernizr-1.5.min.js"></script>
-  {% block extra_script %}{% endblock %}
-</head>
-
-<body class="{% block body_class %}{% endblock %}">
-  <div id="container">
-    {% block header_wrapper %}
-    <div id="header_wrapper">
-      <header>
-        <nav>
-          <ul>
-            <li><a class="active" href="/">Home</a></li>
-            <li><a href="/about/">About</a></li>
-          </ul>
-        </nav>
-        
-        {% if messages %}
-          <ul class="messages">
-            {% for message in messages %}
-              <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </header>
-    </div>
-    {% endblock %}
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    {% endcomment %}
+  </head>
   
-    {% block content_wrapper %}
-    <div id="main">
-      <h1>{% block content_title %}{% endblock %}</h1>
-      {% block content %}{% endblock %}
-    </div>
-    {% endblock %}
+  <body>
+  
+    <div class="topbar">
+      <div class="fill">
+        <div class="container">
+          <a class="brand" href="/">Branding</a>
 
-    {% block sidebar_wrapper %}
-    <div id="sidebar">
-      {% block sidebar %}{% endblock %}
+          <ul class="nav">
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+          </ul>
+          {% if request.user.is_authenticated %}
+          <form action="/accounts/logout/?next={{ request.path }}" class="pull-right" method="post">
+            {% csrf_token %}
+            <button class="btn" type="submit">Log out</button>
+          </form>
+          {% else %}
+          <form action="/accounts/login/?next={{ request.path }}" class="pull-right" method="post">
+            {% csrf_token %}
+            <input class="input-small" name="username" type="text" placeholder="Username">
+            <input class="input-small" name="password" type="password" placeholder="Password">
+            <button class="btn" type="submit">Log in</button>
+          </form>
+          {% endif %}
+        </div>
+      </div>
     </div>
-    {% endblock %}
-    
-    {% block footer_wrapper %}
-    <div id="footer_wrapper">
-      <footer>{% block footer %}{% endblock %}</footer>
-    </div>
-    {% endblock %}
-  </div> <!--! end of #container -->
+  
+    <div class="container">
+      <div class="content">
+          {% for message in messages %}
+          <div class="alert-message {{ message.tags }}">
+            <a class="close" href="#">×</a>
+            <p>{{ message }}</p>
+          </div>
+        {% endfor %}
+        <div class="page-header">
+          <h1>{% block content_title %}{% endblock %}</h1>
+        </div>
+        <div class="row">
+          <div class="span12">
+            {% block content %}{% endblock %}
+          </div>
+          <div class="span4 sidebar">
+            {% block sidebar %}{% endblock %}
+          </div>
+        </div>
+      </div>
 
-  {% comment %}
-  <script>
-   var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
-   (function(d, t) {
-    var g = d.createElement(t),
-        s = d.getElementsByTagName(t)[0];
-    g.async = true;
-    g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g, s);
-   })(document, 'script');
-  </script>
-  {% endcomment %}
-</body>
+      <footer>
+        <p>Shell site</p>
+      </footer>
+
+    </div> <!-- /container -->
+  </body>
 </html>
-
