Moving the form errors bit into its own include

--- a/django/templates/registration/login.html
+++ b/django/templates/registration/login.html
@@ -11,13 +11,7 @@
 
 
 {% block content %}
-  {% if form.non_field_errors %}
-    <div class="alert-message error">
-    {% for error in form.non_field_errors %}
-      <p>{{ error }}</p>
-    {% endfor %}
-    </div>
-  {% endif %}
+  {% include "includes/form_errors.html" %}
   <form action="." method="post" class="login_form">{% csrf_token %}
     {% for field in form %}
       {% include "includes/field.html" %}
