--- a/flaskpeewee/templates/base.html
+++ b/flaskpeewee/templates/base.html
@@ -3,10 +3,12 @@
   <head>
     <title>flask-peewee site shell</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.responsive.css') }}" />
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}" />
     {% block extra_head %}{% endblock %}
-    <script src="{{ url_for('static', filename='js/jquery-1.4.2.min.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('admin.static', filename='js/bootstrap-alerts.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('admin.static', filename='js/bootstrap-alert.js') }}"></script>
+    <script src="{{ url_for('admin.static', filename='js/bootstrap-dropdown.js') }}"></script>
     {% block extra_scripts %}{% endblock %}
     {#
     <script type="text/javascript">
@@ -24,22 +26,31 @@
   </head>
   
   <body>
-  
-    <div class="topbar">
-      <div class="fill">
-        <div class="container">
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
           <a class="brand" href="/">Branding</a>
 
           <ul class="nav">
-            <li><a href="#">Link 1</a></li>
+            <li><a class="active" href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dropdown <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </li>
           </ul>
           {% if user %}
-          <form action="{{ url_for('auth.logout', next=request.url) }}" class="pull-right" method="post">
+          <form action="{{ url_for('auth.logout', next=request.url) }}" class="navbar-form pull-right" method="post">
             <button class="btn" type="submit">Log out</button>
           </form>
           {% else %}
-          <form action="{{ url_for('auth.login', next=request.url) }}" class="pull-right" method="post">
+          <form action="{{ url_for('auth.login', next=request.url) }}" class="navbar-form pull-right" method="post">
             <input class="input-small" name="username" type="text" placeholder="Username">
             <input class="input-small" name="password" type="password" placeholder="Password">
             <button class="btn" type="submit">Log in</button>
@@ -49,31 +60,34 @@
       </div>
     </div>
   
-    <div class="container">
-      <div class="content">
-        {% for category, message in get_flashed_messages(with_categories=true) %}
-          <div class="alert-message {{ category }}">
-            <a class="close" href="#">×</a>
-            <p>{{ message }}</p>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <div class="well sidebar">
+            {% block sidebar %}
+              {# <ul class="nav nav-list"><li class="nav-header">Header...</li><li class="active">... #}
+            {% endblock %}
           </div>
-        {% endfor %}
-        <div class="page-header">
-          <h1>{% block content_title %}{% endblock %}</h1>
         </div>
-        <div class="row">
-          <div class="span12">
-            {% block content %}{% endblock %}
+        <div class="span9">
+          {% for category, message in get_flashed_messages(with_categories=true) %}
+            <div class="alert-message alert-{{ category }}">
+              <a class="close" href="#">×</a>
+              <p>{{ message }}</p>
+            </div>
+          {% endfor %}
+          <div class="page-header">
+            <h1>{% block content_title %}{% endblock %}</h1>
           </div>
-          <div class="span4 sidebar">
-            {% block sidebar %}{% endblock %}
+          <div class="row-fluid">
+            {% block content %}{% endblock %}
           </div>
         </div>
       </div>
-
+      <hr />
       <footer>
         <p>Shell site</p>
       </footer>
-
     </div> <!-- /container -->
   </body>
 </html>
