--- a/flaskpeewee/templates/base.html
+++ b/flaskpeewee/templates/base.html
@@ -62,25 +62,27 @@
   
     <div class="container-fluid">
       <div class="row-fluid">
+        <div class="span9">
+          <div class="content">
+            {% for category, message in get_flashed_messages(with_categories=true) %}
+              <div class="alert-message alert-{{ category }}">
+                <a class="close" href="#">×</a>
+                <p>{{ message }}</p>
+              </div>
+            {% endfor %}
+            <div class="page-header">
+              <h1>{% block content_title %}{% endblock %}</h1>
+            </div>
+            <div class="row-fluid">
+              {% block content %}{% endblock %}
+            </div>
+          </div>
+        </div>
         <div class="span3">
           <div class="well sidebar">
             {% block sidebar %}
               {# <ul class="nav nav-list"><li class="nav-header">Header...</li><li class="active">... #}
             {% endblock %}
-          </div>
-        </div>
-        <div class="span9">
-          {% for category, message in get_flashed_messages(with_categories=true) %}
-            <div class="alert-message alert-{{ category }}">
-              <a class="close" href="#">×</a>
-              <p>{{ message }}</p>
-            </div>
-          {% endfor %}
-          <div class="page-header">
-            <h1>{% block content_title %}{% endblock %}</h1>
-          </div>
-          <div class="row-fluid">
-            {% block content %}{% endblock %}
           </div>
         </div>
       </div>
