--- a/flaskpeewee/static/css/style.css
+++ b/flaskpeewee/static/css/style.css
@@ -1,7 +1,29 @@
+/* Override some defaults */
+html, body {
+  background-color: #eee;
+}
 body {
-  padding-top: 60px;
-  padding-bottom: 40px;
+  padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
 }
 .container-fluid > footer p {
   text-align: center; /* center align it with the container */
+}
+
+/* The white background content wrapper */
+.content {
+  background-color: #fff;
+  padding: 20px;
+  -webkit-border-radius: 0 0 6px 6px;
+     -moz-border-radius: 0 0 6px 6px;
+          border-radius: 0 0 6px 6px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+          box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
+
+/* Page header tweaks */
+.page-header {
+  background-color: #f5f5f5;
+  padding: 20px 20px 10px;
+  margin: -20px -20px 20px;
 }
