--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -3,12 +3,11 @@
   <head>
     <title>django site shell</title>
     <link rel=stylesheet type=text/css href="{{ STATIC_URL }}css/bootstrap.min.css" />
-    <link rel=stylesheet type=text/css href="{{ STATIC_URL }}css/bootstrap.min.responsive.css" />
+    <link rel=stylesheet type=text/css href="{{ STATIC_URL }}css/bootstrap-responsive.min.css" />
     <link rel=stylesheet type=text/css href="{{ STATIC_URL }}css/style.css" />
     {% block extra_head %}{% endblock %}
     <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap-alert.js"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
     {% block extra_scripts %}{% endblock %}
     {% comment %}
     <script type="text/javascript">
