--- a/flaskpeewee/templates/base.html
+++ b/flaskpeewee/templates/base.html
@@ -3,12 +3,11 @@
   <head>
     <title>flask-peewee site shell</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.responsive.css') }}" />
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap-responsive.min.css') }}" />
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}" />
     {% block extra_head %}{% endblock %}
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('admin.static', filename='js/bootstrap-alert.js') }}"></script>
-    <script src="{{ url_for('admin.static', filename='js/bootstrap-dropdown.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}" type="text/javascript"></script>
     {% block extra_scripts %}{% endblock %}
     {#
     <script type="text/javascript">
